add used range data of current worksheet to database
